Rename project to `free-foil-hou` and update related files

--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,7 @@
-name: free-foil-experiments
+name: free-foil-hou
 version: 0.1.0.0
-github: "githubuser/free-foil-experiments"
+github: "fedor-ivn/free-foil-hou"
 license: BSD-3-Clause
-author: "Author name here"
-maintainer: "example@example.com"
-copyright: "2024 Author name here"
 
 extra-source-files:
   - README.md
@@ -18,7 +15,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/githubuser/free-foil-experiments#readme>
+description: Please see the README on GitHub at <https://github.com/fedor-ivn/free-foil-hou#readme>
 
 custom-setup:
   dependencies:
@@ -63,7 +60,7 @@ library:
         - Language.Lambda.Syntax.Skel
 
 executables:
-  free-foil-experiments-exe:
+  free-foil-hou-exe:
     main: Main.hs
     source-dirs: app
     ghc-options:
@@ -71,10 +68,10 @@ executables:
       - -rtsopts
       - -with-rtsopts=-N
     dependencies:
-      - free-foil-experiments
+      - free-foil-hou
 
 tests:
-  free-foil-experiments-test:
+  free-foil-hou-test:
     main: Spec.hs
     source-dirs: test
     ghc-options:
@@ -82,4 +79,4 @@ tests:
       - -rtsopts
       - -with-rtsopts=-N
     dependencies:
-      - free-foil-experiments
+      - free-foil-hou
