--- a/config.toml
+++ b/config.toml
@@ -3,21 +3,21 @@ fragment = "pattern"
 
 [[problems]]
 constraints = [
-    "∀ f, x . X[f, x] = f Y[x]",
-    "∀ x . Y[x] = x x"
+    "∀ f: magic -> t, x: magic. X[f, x] = f Y[x]",
+    "∀ x: magic. Y[x] = x x"
 ]
 
 [[problems.solutions]]
 name = "most general"
 substitutions = [
-    "Y[x] ↦ x x",
-    "X[f, x] ↦ f (x x)",
+    "Y[x: magic] ↦ x x",
+    "X[f: magic -> t, x: magic] ↦ f (x x)",
 ]
 
 [[problems.solutions]]
 name = "with redundant substitution"
 substitutions = [
-    "Y[x] ↦ x x",
-    "X[f, x] ↦ f (x x)",
-    "M[x, y] ↦ y x"
+    "Y[x: magic] ↦ x x",
+    "X[f: magic -> t, x: magic] ↦ f (x x)",
+    "M[x: t, y: t -> u] ↦ y x"
 ]
