--- a/free-foil-hou.cabal
+++ b/free-foil-hou.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -33,6 +33,15 @@ library
       Data.SOAS
       Language.Lambda.Config
       Language.Lambda.Framework
+      Language.Lambda.FCU.Covers
+      Language.Lambda.FCU.Discharge
+      Language.Lambda.FCU.Prune
+      Language.Lambda.FCU.Restrictions
+      Language.Lambda.FCU.RTerms
+      Language.Lambda.FCU.Strip
+      Language.Lambda.FCU.Substitutions
+      Language.Lambda.FCU.Terms
+      Language.Lambda.FCU.Unification
       Language.Lambda.Impl
       Language.Lambda.RawConfig
       Language.Lambda.Syntax.Abs
@@ -48,12 +57,11 @@ library
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
     , hspec-discover:hspec-discover >=2.7.0
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -75,12 +83,38 @@ executable free-foil-hou-exe
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
     , hspec-discover:hspec-discover >=2.7.0
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
+  build-depends:
+      array >=0.5.3.0
+    , base >=4.7 && <5
+    , bifunctors
+    , containers
+    , doctest
+    , free-foil >=0.1.0
+    , free-foil-hou
+    , kind-generics-th
+    , text
+    , tomland
+  default-language: Haskell2010
+
+test-suite doctests
+  type: exitcode-stdio-1.0
+  main-is: Doctests.hs
+  other-modules:
+      Paths_free_foil_hou
+  autogen-modules:
+      Paths_free_foil_hou
+  hs-source-dirs:
+      test/doctests
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wall
+  build-tool-depends:
+      BNFC:bnfc >=2.9.4.1
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -105,12 +139,11 @@ test-suite spec
   hs-source-dirs:
       test/hspec
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
     , hspec-discover:hspec-discover >=2.7.0
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       QuickCheck
     , array >=0.5.3.0
