--- a/.github/workflows/ghc.yml
+++ b/.github/workflows/ghc.yml
@@ -4,11 +4,11 @@ name: GHC (build, test, haddock)
 'on':
   push:
     branches:
-      - master
+      - main
     tags: [v*]
   pull_request:
     branches:
-      - master
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -70,7 +70,7 @@ jobs:
 
   docs:
     needs: [tests]
-    name: "Build (all) and upload haddock (only master)"
+    name: "Build (all) and upload haddock (only main)"
     runs-on: ubuntu-latest
     steps:
       - name: 📥 Checkout repository
@@ -98,7 +98,7 @@ jobs:
 
       - name: 🚀 Publish Site
         uses: JamesIves/github-pages-deploy-action@v4
-        if: ${{ github.ref_name == 'master' }}
+        if: ${{ github.ref_name == 'main' }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           folder: dist
