--- a/free-foil-hou.cabal
+++ b/free-foil-hou.cabal
@@ -31,6 +31,7 @@ custom-setup
 library
   exposed-modules:
       Data.SOAS
+      Language.Lambda.Huet
       Language.Lambda.Impl
       Language.Lambda.Syntax.Abs
       Language.Lambda.Syntax.Layout
