--- a/free-foil-hou.cabal
+++ b/free-foil-hou.cabal
@@ -31,7 +31,10 @@ custom-setup
 library
   exposed-modules:
       Data.SOAS
+      Language.Lambda.Config
+      Language.Lambda.Framework
       Language.Lambda.Impl
+      Language.Lambda.RawConfig
       Language.Lambda.Syntax.Abs
       Language.Lambda.Syntax.Layout
       Language.Lambda.Syntax.Lex
@@ -50,6 +53,7 @@ library
     , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
+    , hspec-discover:hspec-discover >=2.7.0
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -76,34 +80,7 @@ executable free-foil-hou-exe
     , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
-  build-depends:
-      array >=0.5.3.0
-    , base >=4.7 && <5
-    , bifunctors
-    , containers
-    , doctest
-    , free-foil >=0.1.0
-    , free-foil-hou
-    , kind-generics-th
-    , text
-    , tomland
-  default-language: Haskell2010
-
-test-suite doctests
-  type: exitcode-stdio-1.0
-  main-is: Doctests.hs
-  other-modules:
-      Paths_free_foil_hou
-  autogen-modules:
-      Paths_free_foil_hou
-  hs-source-dirs:
-      test/doctests
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wall
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
-  build-tool-depends:
-      BNFC:bnfc >=2.9.4.1
+    , hspec-discover:hspec-discover >=2.7.0
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -133,6 +110,7 @@ test-suite spec
     , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
+    , hspec-discover:hspec-discover >=2.7.0
   build-depends:
       QuickCheck
     , array >=0.5.3.0
