--- a/free-foil-experiments.cabal
+++ b/free-foil-experiments.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -69,11 +69,10 @@ library
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -92,11 +91,10 @@ executable free-foil-experiments-exe
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
@@ -117,11 +115,10 @@ test-suite free-foil-experiments-test
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex >=3.2.4
-    , happy >=1.19.9
   build-tool-depends:
       BNFC:bnfc >=2.9.4.1
+    , alex:alex >=3.2.4
+    , happy:happy >=1.19.9
   build-depends:
       array >=0.5.3.0
     , base >=4.7 && <5
